Added more methods

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,7 +41,9 @@ j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.ja
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${reference.SOEN487-Library-System.jar}:\
+    ${reference.SOEN487-Library-Core.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -71,6 +73,10 @@ lib.dir=${web.docbase.dir}/WEB-INF/lib
 no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
+project.SOEN487-Library-Core=../SOEN487-Library-Core
+project.SOEN487-Library-System=../SOEN487-Library-System
+reference.SOEN487-Library-Core.jar=${project.SOEN487-Library-Core}/dist/SOEN487-Library-Core.jar
+reference.SOEN487-Library-System.jar=${project.SOEN487-Library-System}/dist/SOEN487-Library-System.jar
 resource.dir=setup
 rest.config.type=ide
 run.test.classpath=\
